Make tiny changes to broker form generation.  Major param changes to come later.

--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -116,9 +116,9 @@
         </td>
         <td colspan="5">
         <b>Other General Parameters</b>
-        <br/><b>General Parameters.  Slightly dangerous.  One probably should 
+        <br/><em>General Parameters.  Slightly dangerous.  One probably should 
             not mess with these, except Short Log, unless one is really
-            sure and moderately adventurous.  </b>
+            sure and moderately adventurous.  </em>
 
         </td>
     </tr>
