Expand param options. Clarify some wording on broker form.

--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -127,10 +127,10 @@
         <td>
             <b>Short Log:</b> <br/>
             (includes only params and stats, 
-             no details of sector errors)<br/> 
-             <font size="+1">You may want this turned on 
-            production runs.</font> <br/>
-            <input type="checkbox" name="bShortLog" value="true">
+             no details of sector errors, audits, repairs)<br/> 
+             <font size="+1">You want this turned on 
+            for production runs.</font> <br/>
+            <input type="checkbox" name="bShortLog" value="true" checked>
         </td>
 
 <!--  g e n e r a l  -->
