Extend lifem range to 10000. Widen broker form slightly. Continue to improve HowTo AWS instructions.

--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -30,7 +30,7 @@
         </table>
 
 
-    <table cellpadding=6 cellspacing="0" border="0" width="90%">
+    <table cellpadding=6 cellspacing="0" border="0" width="97%">
 
 <!--  c o m m o n   o p t i o n s  -->    
     <tr bgcolor="#ffffbb">
@@ -249,6 +249,7 @@
                  for non-instruction parameters that the user may select.  
 20170520    RBL Add bRedo checkbox.
                 Correct missing </td> for bTestOnly.
+20170913    RBL Widen the table w.r.t. the window.  
 
 -->
 
