--- a/shelf/views/brokergroup_form_insert.j2
+++ b/shelf/views/brokergroup_form_insert.j2
@@ -61,7 +61,7 @@
                     {%if required%}<font color="red">* required</font>{%endif%}</b>
             </td></tr>
             <tr><td>
-                <input type="text" name={{name}} size="{{size}}" value={{value}} 
+                <input type="text" name={{name}} size="{{size}}" value="{{value}}"
                 {%if extra%}{{extra}}{%endif%}>
             </td></tr>
         </table>
@@ -77,7 +77,7 @@
                     {%if required%}<font color="red">* required</font>{%endif%}</b>
             </td></tr>
             <tr><td>
-                <input type="checkbox" name={{name}} value={{value}} 
+                <input type="checkbox" name={{name}} value="{value}}"
                 {%if extra%}{{extra}}{%endif%}>
             </td></tr>
         </table>
@@ -125,8 +125,8 @@
     {{insertmultivar(dVars.nGlitchMaxlife)}}
 {% endblock %}
 
-{% block nGlitchSpanMulti scoped %}
-    {{insertmultivar(dVars.nGlitchSpan)}}
+{% block nGlitchSpan scoped %}
+    {{insertmyvar(dVars.nGlitchSpan)}}
 {% endblock %}
 
 {% block nLifem scoped %}
@@ -138,7 +138,7 @@
 {% endblock %}
 
 {% block nServerDefaultLife scoped %}
-   {{insertmyvar(dVars.nServerDefaultLife)}}
+   {{insertmyvar(dVars.nServerDefaultLife, required=true)}}
 {% endblock %}
 
 {% block nShelfSize scoped %}
@@ -183,28 +183,8 @@
 
 {%block ignoreme1%}
 -----------------------------
-master
-
-table structure just for placement, no var content
-
-tr
-block name1
-block name2
-block name3
-/tr
-five trs
-22 tds
-
-child
-
-block name1
-    content, trs, tds, substitutions
-block name2
-    similar content but different vars
-22 of these
 
 each block calls macro with a different dict containing name, head, list
-
 
 nAuditSegments
 nDocSize
