--- a/shelf/views/brokergroup_setupform_insert.j2
+++ b/shelf/views/brokergroup_setupform_insert.j2
@@ -186,6 +186,12 @@
 {% block sDetachedLogfile scoped %}
 {% endblock %}
 
+{% block bClearDirs scoped %}
+{% endblock %}
+
+{% block bClearDone scoped %}
+{% endblock %}
+
 
 {%block ignoreme1%}
 -----------------------------
