--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -58,7 +58,10 @@
     <tr bgcolor="#ffffbb">
         {% block sFamilyDir %}{% endblock %}
         {% block sSpecificDir %}{% endblock %}
-        {% block sDatabaseName %}{% endblock %}
+        <td>
+            <font size="+1"><a href="setup">Go to setup page</a></font>
+        </td>
+
         {% block nRandomSeeds %}{% endblock %}
     </tr>
 
