Tell gitignore to include GiantOutput files. Make setup page more conspicuous.

--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -59,7 +59,11 @@
         {% block sFamilyDir %}{% endblock %}
         {% block sSpecificDir %}{% endblock %}
         <td>
-            <font size="+1"><a href="setup">Go to setup page</a></font>
+            <font size="+2">
+                <a href="setup">
+                    <b>&nbsp;&nbsp;Go to setup page</b>
+                </a>
+            </font>
         </td>
 
         {% block nRandomSeeds %}{% endblock %}
