Add nSimLength to form, broker, ins3 instructions, basically everywhere, so that simulation length is propagated properly down from form to main.py.  Note that this is called nSimLength everywhere except the CLI option to broker, where it is --simlen.  This required editing seven files.  You would not believe how many places the name appears and can be confused.  I can never get these things straight. Start work on spreadsheet to demonstrate the plausibility of various failure rates.

--- a/shelf/views/brokergroup_form_base.j2
+++ b/shelf/views/brokergroup_form_base.j2
@@ -156,12 +156,15 @@
         </td>
 
 <!--  g e n e r a l  -->
+        {% block nSimLength %}{% endblock %}
+<!--
         <td>
             <b>Length of simulated time:</b> <br/>
             (10,000 hours = 1 year)<br/>
-            (0 = default = 10 years)<br/>
-            <input type="text" name="nSimLength" size="5" value="0">
+            (0 = default = 10 years = 100,000 hrs)<br/>
+            <input type="text" name="nSimLength" size="7" value="0">
         </td>
+-->
 
         <td>
             <b>Internet bandwith</b> <br/>
@@ -288,6 +291,9 @@
 20170913    RBL Widen the table w.r.t. the window.  
 20171129    RBL Remove min/max vars in favor of multi-select ones.
 20171130    RBL Narrow formatting a little.  
+20180408    RBL Check on simlen input, widen field, add comment. 
+                 Change nSimLength to multi-select pulldown. 
+
 
 -->
 
